--- a/frontend/src/app/feature-modules/user-panel/components/group-detail/group-detail.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/group-detail/group-detail.component.html
@@ -1,4 +1,4 @@
-<div class="content"  *ngIf="(groupDetails$ | async) as groupDetails">
+<div class="content" *ngIf="(groupDetails$ | async) as groupDetails">
   <div class="header">Grupa: {{groupDetails.name}}</div>
 
   <mat-accordion>
@@ -63,7 +63,7 @@
 
     </mat-expansion-panel>
 
-    <mat-expansion-panel [expanded]=true>
+    <mat-expansion-panel [expanded]=false>
       <mat-expansion-panel-header>
         <mat-panel-title>
           Lista Użytkowników
@@ -122,4 +122,65 @@
       </div>
     </mat-expansion-panel>
   </mat-accordion>
+
+  <mat-card>
+    <h4>Utwórz post</h4>
+    <form class="post" [formGroup]="postForm" (ngSubmit)="sendPost()">
+      <mat-form-field class="subject" appearance="outline">
+        <mat-label>Temat</mat-label>
+        <input matInput formControlName="subject">
+      </mat-form-field>
+      <div class="errorInfo"
+        *ngIf="postForm.get('subject').errors && postForm.get('subject').errors.maxlength">
+        Temat nie może przekraczać 100 znaków
+      </div>
+      <mat-form-field appearance="fill">
+        <mat-label>Treść</mat-label>
+        <textarea matInput formControlName="text"></textarea>
+      </mat-form-field>
+      <div class="errorInfo"
+        *ngIf="postForm.get('text').errors && postForm.get('text').dirty">
+        Pole wymagane
+      </div>
+      <!-- <div class="submit-button">
+        <button mat-icon-button>
+          <i class="material-icons">
+            send
+          </i>
+        </button>
+      </div> -->
+      <button mat-raised-button color="primary" class="send-button">Utwórz</button>
+    </form>
+  </mat-card>
+
+
+
+  <mat-card class="example-card" *ngFor="let post of postsArray | orderBy:creationDate">
+    <mat-card-header>
+      <!-- <div mat-card-avatar class="example-header-image"></div> -->
+      <mat-card-title>{{post.title}}</mat-card-title>
+      <mat-card-subtitle>{{post.author.firstName}} {{post.author.lastName}}</mat-card-subtitle>
+    </mat-card-header>
+
+    <mat-card-content>
+      <p>
+        {{post.content}}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <mat-form-field class="comment" [formGroup]="commentForm" (ngSubmit)="sendComment(comment, post.id)">
+        <mat-label>Komentarz</mat-label>
+        <input matInput formControlName="comment">
+      </mat-form-field>
+      <div>
+        <button mat-icon-button>
+          <i class="material-icons">
+            send
+          </i>
+        </button>
+      </div>
+      <!-- <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button> -->
+    </mat-card-actions>
+  </mat-card>
 </div>
