--- a/frontend/src/app/feature-modules/user-panel/components/group-detail/group-detail.component.scss
+++ b/frontend/src/app/feature-modules/user-panel/components/group-detail/group-detail.component.scss
@@ -1,5 +1,5 @@
 .content {
-  display: grid;
+  // display: grid;
   margin: 50px;
 }
 
@@ -26,4 +26,56 @@ mat-accordion {
 
 .filter {
   width: 100%;
+}
+
+mat-card {
+  margin-top: 10px;
+}
+
+.post {
+  display: grid;
+//   grid-template-columns: auto 100px;
+// .subject {
+//   grid-column: 1 / span 2;
+// }
+ 
+}
+
+mat-form-field {
+  margin: 0;
+}
+
+.submit-button {
+  margin: 30px;
+}
+.comment {
+  align-self: center;
+  margin-left: 10px;
+}
+
+mat-card-actions {
+  display: grid;
+  grid-template-columns: auto 50px;
+  i {
+    font-size: 2em;
+    color: rgb(98, 98, 185);
+  }:hover {
+    color: rgb(51, 51, 230);
+    cursor: pointer;
+  }
+}
+
+.send-button {
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+.errorInfo {
+  top: 0;
+  font-size: .8em;
+  color: red;
+}
+.errorMessage {
+  text-align: center;
+  margin: 4px;
 }
