--- a/frontend/src/app/feature-modules/user-panel/components/files/files.component.scss
+++ b/frontend/src/app/feature-modules/user-panel/components/files/files.component.scss
@@ -25,3 +25,14 @@
     margin-bottom: 10px;
   }
   
+  .filesArray {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    :last-child {
+      text-align: right;
+    }
+  }
+
+  .filter {
+    width: 100%;
+  }
