--- a/frontend/src/app/feature-modules/user-panel/components/group-detail/group-detail.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/group-detail/group-detail.component.html
@@ -63,7 +63,7 @@
 
     </mat-expansion-panel>
 
-    <mat-expansion-panel [expanded]=false>
+    <mat-expansion-panel [expanded]=true>
       <mat-expansion-panel-header>
         <mat-panel-title>
           Lista Użytkowników
@@ -123,7 +123,7 @@
     </mat-expansion-panel>
   </mat-accordion>
 
-  <mat-card>
+  <!-- <mat-card>
     <h4>Utwórz post</h4>
     <form class="post" [formGroup]="postForm" (ngSubmit)="sendPost()">
       <mat-form-field class="subject" appearance="outline">
@@ -142,22 +142,21 @@
         *ngIf="postForm.get('text').errors && postForm.get('text').dirty">
         Pole wymagane
       </div>
-      <!-- <div class="submit-button">
+      <div class="submit-button">
         <button mat-icon-button>
           <i class="material-icons">
             send
           </i>
         </button>
-      </div> -->
+      </div>
       <button mat-raised-button color="primary" class="send-button">Utwórz</button>
     </form>
-  </mat-card>
+  </mat-card> -->
 
 
 
-  <mat-card class="example-card" *ngFor="let post of postsArray | orderBy:creationDate">
+  <!-- <mat-card class="example-card" *ngFor="let post of postsArray | orderBy:creationDate">
     <mat-card-header>
-      <!-- <div mat-card-avatar class="example-header-image"></div> -->
       <mat-card-title>{{post.title}}</mat-card-title>
       <mat-card-subtitle>{{post.author.firstName}} {{post.author.lastName}}</mat-card-subtitle>
     </mat-card-header>
@@ -179,8 +178,7 @@
           </i>
         </button>
       </div>
-      <!-- <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button> -->
+
     </mat-card-actions>
-  </mat-card>
+  </mat-card> -->
 </div>
