--- a/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.html
@@ -13,3 +13,30 @@
     <div class="item">{{profileDetails.college}}</div>
   </div>
 </div>
+<div class="files" *ngIf="isTeacher() && !isOwner()">
+  <h3>Pliki użytkownika</h3>
+
+  <mat-form-field class="filter">
+    <input matInput [formControl]="filesArrayFilter" placeholder="Wyszukaj">
+  </mat-form-field>
+  
+  <table mat-table  [dataSource]="filesArrayTable" matSort>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nazwa</th>
+      <td mat-cell *matCellDef="let f">
+        <a href="data:application/vnd.openxmlformats-officedocument.wordprocessingml.document;base64,${f.file}" download="{{f.name}}">
+          {{f.name}}
+        </a>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="creationDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Data utworzenia</th>
+      <td mat-cell *matCellDef="let f">{{f.creationDate | date:'short'}}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
