--- a/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.scss
+++ b/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.scss
@@ -1,13 +1,20 @@
 .content {
   margin: 30px;
-
 }
 
 .tab {
-
   display: grid;
   grid-template-columns: 100px 100px;
   grid-gap: 10px;
   margin: 10px;
+}
 
+.files {
+  margin: 60px;
+  .filter {
+    width: 100%;
+  }
+  table {
+    width: 100%;
+  }
 }
