--- a/frontend/src/app/feature-modules/user-panel/components/user-content/user-content.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/user-content/user-content.component.html
@@ -1,5 +1,5 @@
 <div class=body>
-    <app-side-bar></app-side-bar>
+    <app-side-bar class="side-bar"></app-side-bar>
     <div class="content">
       <app-header></app-header>
       <div class="outlet">
