--- a/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.scss
+++ b/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.scss
@@ -1,5 +1,5 @@
 .content {
-  margin: 30px;
+  margin: 50px;
 }
 
 .tab {
@@ -7,6 +7,11 @@
   grid-template-columns: 100px 100px;
   grid-gap: 10px;
   margin: 10px;
+}
+
+.edit {
+  margin: 10px;
+  margin-top: 20px;
 }
 
 .files {
