--- a/frontend/src/app/feature-modules/user-panel/components/group-detail/group-detail.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/group-detail/group-detail.component.html
@@ -123,7 +123,7 @@
     </mat-expansion-panel>
   </mat-accordion>
 
-  <!-- <mat-card>
+  <mat-card>
     <h4>Utwórz post</h4>
     <form class="post" [formGroup]="postForm" (ngSubmit)="sendPost()">
       <mat-form-field class="subject" appearance="outline">
@@ -151,11 +151,11 @@
       </div>
       <button mat-raised-button color="primary" class="send-button">Utwórz</button>
     </form>
-  </mat-card> -->
+  </mat-card>
 
 
 
-  <!-- <mat-card class="example-card" *ngFor="let post of postsArray | orderBy:creationDate">
+   <mat-card class="example-card" *ngFor="let post of postsArray | orderBy:creationDate">
     <mat-card-header>
       <mat-card-title>{{post.title}}</mat-card-title>
       <mat-card-subtitle>{{post.author.firstName}} {{post.author.lastName}}</mat-card-subtitle>
@@ -178,7 +178,7 @@
           </i>
         </button>
       </div>
-
+      
     </mat-card-actions>
-  </mat-card> -->
+  </mat-card>
 </div>
