--- a/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.html
@@ -1,6 +1,6 @@
-<div class="content">
+<div class="content" *ngIf="(profileDetails$ | async) as profileDetails">
   <h1>Profil:</h1>
-  <div class="tab" *ngIf="(profileDetails$ | async) as profileDetails">
+  <div class="tab">
     <div class="item">Imię:</div>
     <div class="item">{{profileDetails.firstName}}</div>
     <div class="item">Nazwisko:</div>
@@ -14,10 +14,16 @@
     <div class="item">Uczelnia:</div>
     <div class="item">{{profileDetails.college}}</div>
   </div>
-  <div class="edit">
+  <div class="edit" *ngIf="isOwner()">
     <button mat-raised-button color="primary" (click)="openEditDialog()">
       <mat-icon aria-hidden="false">edit</mat-icon>
       Edytuj profil
+    </button>
+  </div>
+  <div class="edit" *ngIf="!isOwner()">
+    <button mat-raised-button color="primary" [routerLink]="['/user-panel/chat', profileDetails.id]">
+      <mat-icon aria-hidden="false">forum</mat-icon>
+      Czat
     </button>
   </div>
 </div>
@@ -49,3 +55,64 @@
   </table>
   <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons></mat-paginator>
 </div>
+
+
+<!-- 
+<mat-card>
+  <h4>Utwórz post</h4>
+  <form class="post" [formGroup]="postForm" (ngSubmit)="sendPost()">
+    <mat-form-field class="subject" appearance="outline">
+      <mat-label>Temat</mat-label>
+      <input matInput formControlName="subject">
+    </mat-form-field>
+    <div class="errorInfo"
+      *ngIf="postForm.get('subject').errors && postForm.get('subject').errors.maxlength">
+      Temat nie może przekraczać 100 znaków
+    </div>
+    <mat-form-field appearance="fill">
+      <mat-label>Treść</mat-label>
+      <textarea matInput formControlName="text"></textarea>
+    </mat-form-field>
+    <div class="errorInfo"
+      *ngIf="postForm.get('text').errors && postForm.get('text').dirty">
+      Pole wymagane
+    </div>
+    <div class="submit-button">
+      <button mat-icon-button>
+        <i class="material-icons">
+          send
+        </i>
+      </button>
+    </div>
+    <button mat-raised-button color="primary" class="send-button">Utwórz</button>
+  </form>
+</mat-card>
+
+
+
+ <mat-card class="example-card" *ngFor="let post of postsArray | orderBy:creationDate">
+  <mat-card-header>
+    <mat-card-title>{{post.title}}</mat-card-title>
+    <mat-card-subtitle>{{post.author.firstName}} {{post.author.lastName}}</mat-card-subtitle>
+  </mat-card-header>
+
+  <mat-card-content>
+    <p>
+      {{post.content}}
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <mat-form-field class="comment" [formGroup]="commentForm" (ngSubmit)="sendComment(comment, post.id)">
+      <mat-label>Komentarz</mat-label>
+      <input matInput formControlName="comment">
+    </mat-form-field>
+    <div>
+      <button mat-icon-button>
+        <i class="material-icons">
+          send
+        </i>
+      </button>
+    </div>
+    
+  </mat-card-actions>
+</mat-card> -->
