posts in profile

--- a/frontend/src/app/feature-modules/main-page/components/login-form/login-form.component.html
+++ b/frontend/src/app/feature-modules/main-page/components/login-form/login-form.component.html
@@ -31,6 +31,6 @@
   <div class="ask">
     Zapomniałeś hasła?
   </div>
-  <button mat-raised-button color="warn" (click)=openRegisterDialog()>Rejestracja</button>
+  <button mat-raised-button color="warn" id="register" (click)=openRegisterDialog()>Rejestracja</button>
   <button mat-raised-button color="warn" (click)=openResetDialog()>Przypomnij hasło</button>
 </div>
