--- a/frontend/src/app/feature-modules/main-page/components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/feature-modules/main-page/components/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
   <div class="item link"><b>Logo</b></div>
 
   <div class="item"><i class="fab fa-amilia"></i></div>
-  <div class="item link" (click)="openLoginDialog()">Logowanie</div>
+  <div class="item link" id="login" (click)="openLoginDialog()">Logowanie</div>
   <div class="item link">2</div>
   <div class="item link">Kontakt</div>
 </div>
