--- a/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.html
@@ -57,10 +57,10 @@
 </div>
 
 
-<!-- 
-<mat-card>
+
+<mat-card class="post-form">
   <h4>Utwórz post</h4>
-  <form class="post" [formGroup]="postForm" (ngSubmit)="sendPost()">
+  <form [formGroup]="postForm" (ngSubmit)="sendPost()">
     <mat-form-field class="subject" appearance="outline">
       <mat-label>Temat</mat-label>
       <input matInput formControlName="subject">
@@ -69,7 +69,7 @@
       *ngIf="postForm.get('subject').errors && postForm.get('subject').errors.maxlength">
       Temat nie może przekraczać 100 znaków
     </div>
-    <mat-form-field appearance="fill">
+    <mat-form-field class="contents" appearance="fill">
       <mat-label>Treść</mat-label>
       <textarea matInput formControlName="text"></textarea>
     </mat-form-field>
@@ -78,41 +78,61 @@
       Pole wymagane
     </div>
     <div class="submit-button">
-      <button mat-icon-button>
+      <!-- <button mat-icon-button>
         <i class="material-icons">
           send
         </i>
-      </button>
+      </button> -->
     </div>
     <button mat-raised-button color="primary" class="send-button">Utwórz</button>
   </form>
 </mat-card>
 
 
+<div  *ngIf="(postsArray$ | async) as postsArray">
+  <mat-card class="example-card post-card" *ngFor="let post of postsArray | orderBy:creationDate">
+   <mat-card-header>
+     <mat-card-title>{{post.title}}</mat-card-title>
+     <mat-card-subtitle>{{post.author.firstName}} {{post.author.lastName}}</mat-card-subtitle>
+   </mat-card-header>
+ 
+   <mat-card-content>
+     <p>
+       {{post.content}}
+     </p>
+   </mat-card-content>
+   <mat-card-actions>
 
- <mat-card class="example-card" *ngFor="let post of postsArray | orderBy:creationDate">
-  <mat-card-header>
-    <mat-card-title>{{post.title}}</mat-card-title>
-    <mat-card-subtitle>{{post.author.firstName}} {{post.author.lastName}}</mat-card-subtitle>
-  </mat-card-header>
+    <mat-accordion>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-description>
+            <div>
+              Komentarze
 
-  <mat-card-content>
-    <p>
-      {{post.content}}
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <mat-form-field class="comment" [formGroup]="commentForm" (ngSubmit)="sendComment(comment, post.id)">
-      <mat-label>Komentarz</mat-label>
-      <input matInput formControlName="comment">
-    </mat-form-field>
-    <div>
-      <button mat-icon-button>
-        <i class="material-icons">
-          send
-        </i>
-      </button>
-    </div>
+            </div>
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <hr>
+        <div class="form">
+          <mat-form-field class="comment" [formGroup]="commentForm" (ngSubmit)="sendComment(comment, post.id)">
+            <input matInput placeholder="Komentarz" formControlName="comment">
+          </mat-form-field>
+     
+            <button mat-icon-button>
+              <i class="material-icons">
+                send
+              </i>
+            </button>
+        </div>
     
-  </mat-card-actions>
-</mat-card> -->
+    
+
+      </mat-expansion-panel>
+    </mat-accordion>
+     
+   </mat-card-actions>
+ </mat-card>
+</div>
+
+
