--- a/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.scss
+++ b/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.scss
@@ -58,6 +58,11 @@ mat-icon {
 }
 
 mat-card-actions {
+  mat-card-content {
+
+      padding: 200px;
+
+  }
   mat-accordion {
     hr {
       opacity: 0.2;
